<resources>
    <string name="app_name">lab2</string>
    <string name="title_home">Home</string>
    <string name="title_BMI">BMI</string>
    <string name="title_benedict_harris">Benedict / Harris</string>
    <string name="title_receipts">Przepisy</string>
    <string name="weight">Waga</string>
    <string name="height">Wzrost</string>
    <string name="calculate">Oblicz</string>
    <string name="age">Wiek</string>
    <string name="title_quiz">Quiz</string>
    <string-array name="gender">
        <item>Kobieta</item>
        <item>Mezczyzna</item>
    </string-array>
    <string name="true_text">True</string>
    <string name="false_text">false</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>
    <string name="question_declaration">Czy wartosc BMI 20 jest optymalna?</string>  //True
    <string name="question_temp">Czy marchewki zawieraja beta-karoten?</string>  //True
    <string name="question_body">Czy duza zawartosc cukru w spozywanych produktch jest dobra dla organizmu?</string> //False - 206
    <string name="question_human">Wysoko przetworzona zywnosc jest zdrowa?</string>   //False - 2
    <string name="question_physics">Warzywa sa zdrowe</string>  // True
    <string name="question_spider">Dorosly czlowiek powinien pic 10 litrow wody dziennie</string>  //False - 8
    <string name="question_water">Water is an example of a chemical element. </string>  //False
    <string name="question_shark">Sharks are mammals. </string>   //False Shark are Fish
    <string name="question_electron">Electrons are larger than molecules. </string>  //False
    <string name="question_planet">Venus is the closest planet to the Sun. </string>  //False - Mercury
    <string name="question_ocean">The Atlantic Ocean is the biggest ocean on Earth. </string>  //False - Pacific Ocean
    <string name="previous_text">previous</string>
    <string name="next_text">next_text</string>
    <string name="title_graph">Wykres</string>

</resources>