<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_graph">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.lab2.ui.dashboard.DashboardFragment"
        android:label="@string/title_BMI"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.lab2.ui.notifications.NotificationsFragment"
        android:label="@string/title_benedict_harris"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_receipts"
        android:name="com.example.lab2.ui.receipts.ReceiptsFragment"
        android:label="@string/title_receipts"
        tools:layout="@layout/fragment_receipts" />

    <fragment
        android:id="@+id/navigation_quiz"
        android:name="com.example.lab2.ui.quiz.QuizFragment"
        android:label="@string/title_quiz"
        tools:layout="@layout/fragment_quiz" />

    <fragment
        android:id="@+id/navigation_graph"
        android:name="com.example.lab2.ui.graph.GraphFragment"
        android:label="@string/title_graph"
        tools:layout="@layout/fragment_graph" />
</navigation>